--- a/Bonita/app/src/main/AndroidManifest.xml
+++ b/Bonita/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activity.WomenServiceActivity"
+            android:theme="@style/DarkTheme"></activity>
         <activity android:name=".activity.MainPageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
