--- a/Bonita/app/src/main/AndroidManifest.xml
+++ b/Bonita/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.WomenServiceActivity"></activity>
+        <activity android:name=".activity.DetailDiscountActivity"
+            android:theme="@style/DarkTheme"></activity>
+        <activity android:name=".activity.WomenServiceActivity" />
         <activity android:name=".activity.MainPageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
