--- a/Bonita/app/src/main/AndroidManifest.xml
+++ b/Bonita/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="thuyvtk.activity.hci_bonita">
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICE" />
 
     <application
         android:allowBackup="true"
@@ -10,10 +16,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.DetailDiscountActivity"
-            android:theme="@style/DarkTheme"></activity>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+        <activity android:name=".activity.DetailDiscountActivity">
+
+        </activity>
         <activity android:name=".activity.WomenServiceActivity" />
-        <activity android:name=".Notification"></activity>
+        <activity android:name=".activity.Notification"></activity>
         <activity
             android:name=".activity.TradeMarkFollow"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
@@ -23,7 +33,6 @@
         <activity
             android:name=".activity.SaleOffActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
-        <activity android:name=".activity.WomenServiceActivity" />
         <activity android:name=".activity.MainPageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
