--- a/Bonita/app/build.gradle
+++ b/Bonita/app/build.gradle
@@ -35,5 +35,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     // marterial
     implementation 'com.google.android.material:material:1.1.0-alpha06'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.libraries.places:places:1.1.0'
 
 }
