--- a/Bonita/app/src/main/AndroidManifest.xml
+++ b/Bonita/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.AceptedScreen"></activity>
+        <activity android:name=".activity.BrandActivity"></activity>
+        <activity android:name=".activity.AceptedScreen" />
         <activity
             android:name=".activity.OrderDetail"
             android:windowSoftInputMode="adjustPan" />
