--- a/Bonita/app/src/main/AndroidManifest.xml
+++ b/Bonita/app/src/main/AndroidManifest.xml
@@ -17,8 +17,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.BrandActivity"
-            android:theme="@android:style/Theme.NoTitleBar"></activity>
+        <activity android:name=".activity.LoginByPhoneActivity"></activity>
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.FilterActivity" />
+        <activity
+            android:name=".activity.BrandActivity"
+            android:theme="@android:style/Theme.NoTitleBar" />
         <activity android:name=".activity.AceptedScreen" />
         <activity
             android:name=".activity.OrderDetail"
