--- a/Bonita/app/src/main/AndroidManifest.xml
+++ b/Bonita/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.LoginByPhoneActivity"></activity>
+        <activity android:name=".activity.RatingActivity"></activity>
+        <activity android:name=".activity.LoginByPhoneActivity" />
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.FilterActivity" />
         <activity
